sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
/*  Styles for Annotator Touch  */


/*  For tabbed annotation editor  */

.annotator-touch-editor.tab-out .annotator-touch-widget {
    left: calc(100% - 370px);
    top: 10px;
}

.annotator-touch-editor.tab-in .annotator-touch-widget {
    left: 100%;
    top: 10px;
}

.annotator-touch-editor.tab-out .annotator-touch-widget.absolute {
    position: absolute;
    top: 500px;
}

.annotator-touch-controls.tab-in {
    position: fixed;
    top: 350px;
    right: -58px;
    min-width: auto;
    -webkit-transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    -o-transform: rotate(270deg);
}

.annotator-touch-controls.tab-out {
    display: none;
}


/* Styles for smaller screens */

@media only screen and (max-width: 480px) {
    .annotator-touch-viewer {
        left: 0 !important;
        width: 100%;
        background: none;
        min-width: 0;
        border: none;
    }

    .annotator-touch-viewer .annotator-widget {
        position: static;
        left: 0;
        width: 100%;
        height: auto;
        min-width: 0;
        -webkit-box-sizing: border-box;
        -webkit-border-radius: none;
        border-radius: none;
    }

    .annotator-touch-viewer .annotator-widget::after {
        display: none;
    }

    .annotator-touch-editor {
        border: none;
        -webkit-box-align: start;
        -moz-box-align: start;
        box-align: start;
    }

    .annotator-touch-editor .annotator-touch-widget {
        width: 100%;
        max-width: auto;
        margin: 0;
        border-color: #333;
        border-left: none;
        border-right: none;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        -ms-box-shadow: none;
        -o-box-shadow: none;
        box-shadow: none;
    }

    .annotator-touch-editor .annotator-touch-widget-inner {
        width: 100%;
        max-width: auto;
        margin: 0;
        border: 0;
    }

    .annotator-touch-editor .annotator-controls {
        border-bottom: 1px solid #D4D4D4;
    }

    .annotator-touch-editor .annotator-touch-widget,
    .annotator-touch-editor .annotator-touch-widget-inner,
    .annotator-touch-editor .annotator-touch-widget .annotator-item:first-child textarea,
    .annotator-touch-editor .annotator-controls {
        border-radius: 0;
    }
}


/* Icon only button styles */

[data-annotator-use-icons] .annotator-touch-widget .annotator-button {
    /* width & overflow is required by Android WebKit */
    width: 1px;
    overflow: hidden;
    text-indent: -999em;
    padding-left: 25px;
}

[data-annotator-use-icons] .annotator-touch-controls .annotator-button {
    padding-left: 35px;
}

[data-annotator-use-icons] .annotator-touch-controls .annotator-button::after {
    left: 20px;
}

[data-annotator-use-icons] .annotator-touch-viewer .annotator-touch-controls button {
    padding-left: 25px;
    text-indent: -9000em;
}

[data-annotator-use-icons] .annotator-touch-viewer .annotator-touch-controls button::after {
    left: 15px;
}

[data-annotator-use-icons] .annotator-touch-viewer .annotator-widget {
    min-width: 320px;
}


/*  Expanding quote for touch  */
.annotator-item-quote.annotator-touch-expand span {
    overflow: visible;
    text-overflow: inherit;
    white-space: inherit;
}


/* Editor Overrides */

//  added 'not' clause because otherwise this style overrides
//  the 'display: none;' needed to hide the editor.

.annotator-touch-editor:not(.annotator-hide) {
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -moz-box;
    display: box;
    -webkit-box-pack: center;
    -webkit-box-align: center;
    -moz-box-pack: center;
    -moz-box-align: center;
    box-pack: center;
    box-align: center;
}

.annotator-touch-editor .annotator-touch-widget {
    pointer-events: all;
    width: 370px;
    left: 25%;
    position: fixed;
}

.annotator-touch-editor .annotator-touch-widget-inner {
    position: static;
    width: auto !important;
    padding: 0;
    background: #fff;
}

.annotator-touch-editor .annotator-widget::after {
    display: none;
}

.annotator-touch-editor .annotator-widget .annotator-item {
    border-top-color: rgba(0, 0, 0, 0.15);
}

.annotator-touch-editor .annotator-widget .annotator-item,
.annotator-touch-editor.annotator-editor .annotator-item label,
.annotator-touch-editor.annotator-editor .annotator-item input,
.annotator-touch-editor.annotator-editor .annotator-item textarea {
    font-size: 18px;
}

.annotator-touch-editor.annotator-editor .annotator-item input,
.annotator-touch-editor.annotator-editor .annotator-item label {
    line-height: 30px;
    margin-left: 8px;
}

.annotator-touch-editor.annotator-editor .annotator-item input[checkbox] {
    font-size: large;
}

.annotator-touch-editor .annotator-widget .annotator-item:first-child textarea {
    font-size: 18px;
    background-color: #fff;
    -webkit-border-radius: 3px 3px 0 0;
    -moz-border-radius: 3px 3px 0 0;
    -o-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
}

.annotator-touch-editor .annotator-resize {
    display: none;
}

.annotator-touch-editor .annotator-controls {
    padding: 7px;
    background-color: #efefef;
    background-image: none;
}

.annotator-touch-editor .annotator-item-quote {
    font-size: 16px;
    line-height: 1.2;
    border-color: #cebfa2;
    background-color: #fbfae9;
    color: #a58129;
    padding: 10px 7px;
}


/* ----------------------------------------------------------------
* Touch styles
* from annotator/css/annotator.touch.css
*/

.annotator-selection-handle::after {
    background-image: url(../images/handle.png);
}
/* ... */

